--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,7 +2,7 @@
   --c-primary: rgb(12 34 54);
   --c-secondary: #14d0d2;
   --c-text: #000000;
-  --c-white: #ffffff;
+  --c-white: #fff;
   --c-black-2: rgb(146 166 183);
   --c-gray-1: #666;
   --c-blue: #14d0d2;
