--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,6 +4,7 @@
   --c-text: #000000;
   --c-white: #fff;
   --c-black-2: rgb(146 166 183);
+  --c-gray: #333;
   --c-gray-1: #666;
   --c-gray-2: #999;
   --c-blue: #14d0d2;
