--- a/src/components/Common/Banner/styles.module.css
+++ b/src/components/Common/Banner/styles.module.css
@@ -2,6 +2,7 @@
     height: 550px;
     width: 100%;
     position: relative;
+    margin-top: 100px;
 }
 .banner__wrapper{
     position: absolute;
