--- a/src/components/Common/PeopleCard/styles.module.css
+++ b/src/components/Common/PeopleCard/styles.module.css
@@ -1,6 +1,12 @@
+.card__container{
+  width: 300px;
+  height: 465px;
+}
 .card__wrapper{
     border-radius: 0 !important;
     box-shadow: none !important;
+    width: 100%;
+    height: 100%;
 }
 .card__wrapper button {
   display: flex;
@@ -21,5 +27,13 @@
   line-height: 30px;
   font-weight: 600;
   color: #333;
+  max-height: 50px;
   text-transform: uppercase;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 290px;
+}
+.card__content__desc{
+  max-height: 50px;
 }
